--- a/code_random_text_short.ipynb
+++ b/code_random_text_short.ipynb
@@ -55,14 +55,40 @@
       "metadata": {
         "id": "o4T5T3QtUOuI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "9f2c0bae-f3ca-4417-f9c5-936c5c90cb2f"
       },
       "source": [
         "import nltk\n",
-        "import random"
+        "import random\n",
+        "nltk.download('genesis')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package genesis to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/genesis.zip.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -87,7 +113,7 @@
       "metadata": {
         "id": "DVIObSJZUOvT",
         "colab_type": "code",
-        "outputId": "5d05a445-1b27-4d1a-a82b-7958fe44446d",
+        "outputId": "a317c461-95b0-4962-9f8d-28a918ec2657",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -98,7 +124,7 @@
         "print(text[110:200])\n",
         "bigrams = nltk.bigrams(text)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +140,7 @@
       "metadata": {
         "id": "CTsMs4phUOvj",
         "colab_type": "code",
-        "outputId": "15cd4661-1f10-414f-afa0-1e4a1b76efeb",
+        "outputId": "c2778608-d1df-483a-e4a9-867872680525",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -128,7 +154,7 @@
         "\n",
         "print(\"cfd['living']\", cfd['living'])"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +221,7 @@
       "metadata": {
         "id": "JqyArC48UOvx",
         "colab_type": "code",
-        "outputId": "8cfa0c74-026b-4f7c-c5da-9104815b9b74",
+        "outputId": "fa8ccfe1-bbbb-4ee3-ad34-fab130d32d1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -205,13 +231,13 @@
         "print('model of living: ')\n",
         "generate_random_model(cfd, 'living', 140) "
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "model of living: \n",
-            "living creature after his father of the LORD , that he said to the earth ; and the land of his brethren ; and the land of his father , and the land , and said , I will I have done this land of the LORD said unto the land of the LORD God said , and said to pass in the land , I will I have I have I have I have given my son , I pray you , I will not , and the earth . And the land of my son of my father of my father of the earth ; And the LORD , I pray for the land , I will give me , I have done . Now these were born him ; and said to the land , I will "
+            "living creature after the land , and the LORD God hath made me . Then Jacob said to the earth . Now these were born unto him , I will I will not be with me and the earth . Then Abraham , I have I will I have given my lord , I pray you and he said to pass in the LORD God hath given me , I have given my father of his father ' s house . Now these things , that I will give me and the earth ; for the earth . Now therefore , that he was a son of my lord , I pray you , that thou art a man ' wives of his father , that I will I have done . And the LORD said , I have given "
           ],
           "name": "stdout"
         }
